--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,11 @@
-/*universal selector */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-/* element selectors*/
 body {
-    /*added this so I can move other boxes later, position: relative;*/
     background-color: #d9dcd6;
-    color: #ffffff;
-}
-
-a {
-    text-decoration: none;
-    color: #ffffff;
-}
-
-p {
-    font-size: 16px;
 }
 
 .header {
@@ -31,42 +18,45 @@ p {
 .header h1 {
     display: inline-block;
     font-size: 48px;
-    
 }
 
-/*The "seo" in Horiseon is a little different color*/
 .header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-    padding: 0px 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
-    padding: 0px 20px;
 }
 
-/* Main  */
-figure {
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
+.hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
-    /*object-fit: cover*/
 }
 
 .float-left {
@@ -79,72 +69,13 @@ figure {
     margin-left: 25px;
 }
 
-section  {
+.content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
-    /*added this to try and bring the aside up but didn't work
-    box-sizing: border-box;*/
 }
 
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-/* benefits to be aligned as a column on the right could it be called an aside. NOT aligning over there*/
-
-aside {
+.benefits {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -153,58 +84,44 @@ aside {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-    /*added this to try a get the aside to rise up
-    box-sizing: border-box;*/
 }
 
-.benefit-lead {
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
 
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
+/*main contenct styling*/
+
+.services {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
 }
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
+.services img {
+    max-height: 200px;
 }
 
+.services h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
 
 .footer {
     padding: 30px;
@@ -215,16 +132,4 @@ aside {
 
 .footer h2 {
     font-size: 20px;
-}
-
-@media  screen and (max-width: 992px) {
-    .card {
-        width: 50%
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .card {
-        width: 100%;
-    }
 }
