--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,40 @@
+/* universal selectors */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+
 body {
     background-color: #d9dcd6;
+    position: relative;
 }
 
+/* Nav bar */
+header {
+    position: fixed;
+}
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #3284ad;
-    color: #ffffff ;
+    background-color: #2a607c;
+    color: #ffffff;
+    width: 100%;
+       
 }
 
 .header h1 {
     display: inline-block;
     font-size: 48px;
+    line-height: 50px;
 }
 
-.header h1 .seo {
-    color: #10110f;
+.seo {
+    color: #d81d1d;
 }
 
-.header nav {
+.header div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,31 +42,41 @@ body {
     font-size: 20px;
 }
 
-.header nav ul {
+.header div ul {
     list-style-type: none;
 }
 
-.header nav ul li {
+.header div ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
+/* links */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
-p {
-    font-size: 16px;
+a:hover {
+    color: #d81d1d;
 }
 
 .hero {
-    height: 800px;
-    width: 100%;
+    height: 600px;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+    border-bottom: 2px solid black;
+}
+
+/* main body aligned left*/
+main p {
+    font-size: 20px;
+}
+
+aside p {
+    padding-bottom: 3px;
 }
 
 .float-left {
@@ -73,31 +93,72 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+
 }
-
-
-/*main content styling*/
-
-.services {
+.search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
+    background-color: #2a607c;
     color: #ffffff;
+    border: 2px solid black;
+
 }
 
-.services img {
+.online-reputation-management {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2a607c;
+    color: #ffffff;
+    border: 2px solid black;
+
+}
+
+.social-media-marketing {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2a607c;
+    color: #ffffff;
+    border: 2px solid black;
+}
+
+.search-engine-optimization img {
     max-height: 200px;
+    border: 2px solid black;
 }
 
-.services h2 {
+.online-reputation-management img {
+    max-height: 200px;
+    border: 2px solid black;
+}
+
+.social-media-marketing img {
+    max-height: 200px;
+    border: 2px solid black;
+}
+
+.search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-/*aside content styling*/
-.benefits {
+.online-reputation-management h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.social-media-marketing h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/* aside aligned right*/
+#benefits {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -105,33 +166,77 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    background-color: #2a607c;
+    border: 2px solid black;
 }
 
-.benefit {
-    margin-bottom: 32px;
+.benefit-lead {
+    margin-top: 10px;
+    margin-bottom: 28px;
     color: #ffffff;
-}
-
-
-.benefit h3 {
-    margin-bottom: 10px;
+    border: 2px solid black;
     text-align: center;
 }
 
-.benefit img {
+.benefit-brand {
+    margin-bottom: 30px;
+    color: #ffffff;
+    border: 2px solid black;
+    text-align: center;
+}
+
+.benefit-cost {
+    margin-bottom: 12px;
+    color: #ffffff;
+    border: 2px solid black;
+    text-align: center;
+}
+
+.benefit-lead h3 {
+    margin-bottom:10px;
+    text-align: center;
+    padding-top: 3px;
+}
+
+.benefit-brand h3 {
+    margin-bottom: 10px;
+    text-align: center;
+    padding-top: 3px;
+}
+
+.benefit-cost h3 {
+    margin-bottom: 10px;
+    text-align: center;
+    padding-top: 3px;
+}
+
+.benefit-lead img {
     display: block;
-    margin: 10px auto;
+    margin: 5px auto;
     max-width: 150px;
 }
 
+.benefit-brand img {
+    display: block;
+    margin: 5px auto;
+    max-width: 150px;
+}
+
+.benefit-cost img {
+    display: block;
+    margin: 5px auto;
+    max-width: 150px;
+}
+
+
+/* footer */
 .footer {
-    padding: 30px;
+    padding: 20px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h4 {
-    font-size: 20px;
+.footer h2 {
+    font-size: 25px;
 }
